macro/tests/ui/fail/03-invalid-range.rs
use liquid_macro::seq;

seq!(N in a..b {
    // nothing
});

fn main() {}
